--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch --no-warnings ./src/server.js"
   },
   "author": "Pedro Henrique Ferri",
   "license": "ISC",
@@ -14,7 +15,10 @@
   },
   "homepage": "https://github.com/P3dr7/Estocks#readme",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "fastify": "^4.27.0",
     "pg": "^8.11.5"
   }
 }
