--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:integration": "jest --config jest.integration.config.js",
+    "test": "jest --passWithNoTests",
     "dev": "node --watch --no-warnings ./src/server.js"
   },
   "author": "Pedro Henrique Ferri",
@@ -16,9 +17,16 @@
   "homepage": "https://github.com/P3dr7/Estocks#readme",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@jest/globals": "^29.7.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
     "pg": "^8.11.5"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-mock": "^29.7.0"
   }
 }
