--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.7",
