--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "homepage": "https://github.com/P3dr7/Estocks#readme",
   "dependencies": {
+    "@fastify/cookie": "^7.4.0",
     "@fastify/cors": "^9.0.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5"
   }
 }
